--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "sell-mine-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/server.mjs"
   },
   "repository": {
     "type": "git",
@@ -14,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/JMIsham/sell-mine-api/issues"
+    "url": "https://github.com/ßJMIsham/sell-mine-api/issues"
   },
   "homepage": "https://github.com/JMIsham/sell-mine-api#readme",
   "dependencies": {
