--- a/.choreo/endpoints.yaml
+++ b/.choreo/endpoints.yaml
@@ -16,3 +16,5 @@ endpoints:
     # +optional Context (base path) of the API that is exposed via this endpoint.
     # This is mandatory if the endpoint type is set to REST or GraphQL.
     context: /
+
+    schemaFilePath: ./openapi.yaml
